--- a/other/second.html
+++ b/other/second.html
@@ -48,7 +48,7 @@
                                     
                                         <nav id="nave">
                                             <ul>
-                                                <li><button class="menub"><a href="./third.html" target="_blank">.net으로 만든 프로그램 보러 가기(새창)</a></button></li>
+                                                <li><button class="menub"><a href="../third.html" target="_blank">.net으로 만든 프로그램 보러 가기(새창)</a></button></li>
                                             </ul>
                                         </nav>
                                         <br>
