--- a/other/이력서.html
+++ b/other/이력서.html
@@ -51,11 +51,11 @@
     </table>
         <table class="table table-profile-primary" style="margin: 0;padding: 0;border: 0;border-collapse: collapse;width: 100%;">
         <tr style="margin: 0;padding: 0;border: 0;">
-            <!--<td class="col1 photo" rowspan="4" style="margin: 0;padding: 0;border: 1px solid #edeef0;color: #000;font-size: 12px;height: 38px;vertical-align: middle;width: 16%;text-align: center;">-->
+            <td class="col1 photo" rowspan="4" style="margin: 0;padding: 0;border: 1px solid #edeef0;color: #000;font-size: 12px;height: 38px;vertical-align: middle;width: 16%;text-align: center;">
                 
                 <!--<img src="..\images\최창준.jpg" alt="" width="140" height="182" style="margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;box-sizing:border-box;font-family:'Malgun Gothic';color:#000;font-size:12px;border-width:0;border-style:none;vertical-align:top;width:140px;height:182px;">-->
 
-                <!--<img src="https://file2.jobkorea.co.kr/Net/UserPhoto/PhotoView?FN=2018\7\2\JK_GG_NV_22029964.jpg" alt="" width="140" height="182" style="margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;box-sizing:border-box;font-family:'Malgun Gothic';color:#000;font-size:12px;border-width:0;border-style:none;vertical-align:top;width:140px;height:182px;">-->
+                <img src="..\images\최창준.jpg" alt="" width="140" height="182" style="margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;box-sizing:border-box;font-family:'Malgun Gothic';color:#000;font-size:12px;border-width:0;border-style:none;vertical-align:top;width:140px;height:182px;">
             </td>
             <td class="name" colspan="4" style="margin: 0;padding: 0 10px;border: 1px solid #edeef0;color: #000;font-size: 12px;height: 38px;vertical-align: middle;">
                 <span class="name" style="margin: 0;padding: 0;border: 0;font-size: 12px;color: #000;">최창준</span>
