--- a/other/이력서.html
+++ b/other/이력서.html
@@ -40,7 +40,7 @@
     </table>
     <table class="table-subject" style="margin: 0;padding: 0;border: 0;border-collapse: collapse;width: 100%;">
         <tr style="margin: 0;padding: 0;border: 0;">
-            <td style="margin: 0;padding: 15px 0;border: 0;color: #000;font-size: 30px;letter-spacing: -2px;line-height: 1.4;text-align: center;word-break: break-all;">산업기능요원 지원 이력서입니다. (산업기능요원 / 현역 2급 )</td>
+            <td style="margin: 0;padding: 15px 0;border: 0;color: #000;font-size: 30px;letter-spacing: -2px;line-height: 1.4;text-align: center;word-break: break-all;">산업기능요원 지원 이력서입니다. (병역특례 산업기능요원 / 현역2급 / 즉시 근무 가능합니다.)</td>
         </tr>
     </table>
 
