--- a/other/second.html
+++ b/other/second.html
@@ -29,7 +29,7 @@
                                 반장으로서 책임감이 있고 고장이 난 컴퓨터뿐만 아니라 전체적으로 정확하게 점검까지 해서 믿음이 간다며 칭찬해 주셨습니다. 이후 동아리 선생님께서 숫자가 한 개라도 틀리면 안 되는 ip주소 및 
                                 컴퓨터 모델명 조사를 지시하셨습니다. 제가 실수할 것 같다고 말씀드렸더니 너의 정확성과 신뢰도 때문에 부탁한 거야라고 말씀하셨습니다. 
                                 <br>
-                                하지만 정확함과 책임감을 우선으로 절대 틀리지 않게 조사하다보니 조사가 느려지는 것을 느끼게 되었습니다. 현재 이점을 극복해 지금 다니고 있는 직장에서 신속하고 정확하게 일을 처리해 
+                                하지만 정확함과 책임감을 우선으로 절대 틀리지 않게 조사하다보니 조사가 느려지는 것을 느끼게 되었습니다. 현재 이점을 극복해 직장에서 신속하고 정확하게 일을 처리해 
                                 같이 일하는 동료가 업무량이 많으면 나눠서 할 정도로 빠른 처리가 가능하게 되었습니다.</p>
                             <h2>학교생활</h2>
                             <p>
