--- a/other/이력서.html
+++ b/other/이력서.html
@@ -1330,7 +1330,7 @@
             <td class="td" style="margin: 0;padding: 15px 10px;border: 1px solid #edeef0;color: #000;font-size: 12px;">
                 <table class="table-introduction-header" style="margin: 0;padding: 0;border: 0;border-collapse: collapse;width: 100%;">
                     <tr style="margin: 0;padding: 0;border: 0;">
-                        <td style="margin: 0;padding: 0;border: 0;color: #000;font-size: 12px;font-weight: bold;">자기소개서</td>
+                        <td style="margin: 0;padding: 0;border: 0;color: #000;font-size: 12px;font-weight: bold;">아래의 버튼을 누르시면, 자기소개서 페이지로 이동합니다.</td>
                     </tr>
                 </table>
                 <table class="table-introduction-blank" style="margin: 0;padding: 0;border: 0;border-collapse: collapse;width: 100%;">
