--- a/other/이력서.html
+++ b/other/이력서.html
@@ -213,7 +213,7 @@
                         </tr>
                         <tr style="margin: 0;padding: 0;border: 0;">
                             <td class="label" style="margin: 0;padding: 0;border: 0;color: #666;font-size: 12px;width: 73px;text-align: left;vertical-align: top;">학점</td>
-                            <td class="value" style="margin: 0;padding: 0;border: 0;color: #666;font-size: 12px;text-align: left;">4.38 / 4.5</td>
+                            <td class="value" style="margin: 0;padding: 0;border: 0;color: #666;font-size: 12px;text-align: left;"><b>4.38 / 4.5</b></td>
                         </tr>
                                     </table>
             </td>
